# krytis

./: .gitignore  AGENTS.md  Containerfile  Containerfile.runner  README.md  fnox.toml  mise.toml  project.conf  pyproject.toml
.claude/: settings.json
.claude/commands/: skills-check.md
.github/: renovate.json5
.github/workflows/: cache-warm.yml  track-bst-sources.yml
docs/: SKILL.md  upstreams.yml
docs/plan/: ci-workflows.md  composefs-chunkah.md  deferred-from-dakota.md  mise-task-shorthand.md  multimedia-codecs.md  native-bst-local-dev.md  planning-to-issues.md  renovate-expansion.md  runner-followup.md  runner-verification.md  secure-boot-uki.md  self-build.md
docs/skills/: bootc-vm.md  bst.md  chunkah.md  ci-runner.md  dakota.md  desktop.md  fido2.md  github-projects.md  mise.md  packaging-zig.md  pam.md  upstream-sync.md  workflow.md  zirconium-hawaii.md
elements/: freedesktop-sdk.bst  gnome-build-meta.bst
elements/config/: bootc.bst  codecs-extra-ldconfig.bst  desktop-udev.bst  fido2-tasks.bst  flatpak-preinstall.bst  greetd-config.bst  gtk-settings.bst  kmscon.bst  locale-data.bst  mise-aliases.bst  niri-config.bst  noctalia-assets.bst  noctalia-skel.bst  oomd.bst  plymouth-theme.bst  starlit-update.bst  systemd-firstboot.bst  u2f-config.bst  xdg-portals.bst  xwayland-satellite.bst
elements/core/: bootc.bst  composefs-loop-udisks-ignore.bst  efibootmgr.bst  gum.bst  initramfs.bst  linux-cachyos.bst  mise.bst  os-release.bst  pam-u2f.bst  (+3 more)
include/: aliases.yml  image-version.yml  variables.yml
scripts/: generate-fakecap-manifest.py  krytis-diag
(+150 files in other folders)
